fix plane jump to start

--- a/css/style.css
+++ b/css/style.css
@@ -567,7 +567,7 @@ h3 {
 .hp-plane {
     --_plane-rotate: -3deg;
     
-    animation: plane-move 30s linear infinite;
+    animation: plane-move 30s linear -4s infinite;
 
     .hp-plane-wo-text {animation: plane-wo-text-move 3s ease-in-out alternate infinite;}
     .hp-plane-body {animation: plane-body-move 6s ease-in-out infinite;}
@@ -577,7 +577,7 @@ h3 {
 }
 
 @keyframes plane-move {
-    0% {translate: -15% var(--_y-location);}
+    0% {translate: 15% var(--_y-location);}
     100% {translate: -200% var(--_y-location);}
 }
 
